<resources>
    <string name="app_name">CheckNote</string>
    <string name="checknotes">CheckNotes</string>
    <string name="checknote">CheckNote</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="passward">Passward</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_passward">Forgot Passward ?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="preference_file_name">Login Preferences</string>
    <string name="name_min_3_charecter">Name(Min.3 charecter)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="passward_min_4_character">Passward(Min.4 character)</string>
    <string name="confirm_passward">Confirm Passward</string>
    <string name="register">Register</string>
    <string name="enter_your_register_mobile_number_and_email_below">Enter your register mobile number and email below:</string>
    <string name="next">Next</string>
</resources>
